# pygris

./: .gitignore  00_core.ipynb  404.html  LICENSE  MANIFEST.in  README.md  _quarto.yml  arc_layer.html  index.html  index.ipynb  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  settings.ini  setup.py  sitemap.xml
.jupyter/: desktop-settings.json
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
01-basic-usage/: 01-basic-usage.ipynb  index.html
03-data-utilities/: 03-data-utilities.ipynb  index.html
04-geocoding/: 04-geocoding.ipynb  index.html
docs/: 01-basic-usage.ipynb  03-data-utilities.ipynb  04-geocoding.ipynb  index.md  reference.md
nbs/: 00_helpers.ipynb  01_enumeration_units.ipynb
pygris/: __init__.py  _modidx.py  data.py  datasets.py  enumeration_units.py  geocode.py  geometry.py  helpers.py  internal_data.py  legislative.py  metro_areas.py  national.py  native.py  transportation.py  utils.py  water.py
pygris/data/: fips_codes.csv
reference/: index.html
site/: index.html  sitemap.xml
site/01-basic-usage/: index.html
site/03-data-utilities/: index.html
site/04-geocoding/: index.html
site/reference/: index.html
